<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="produce"
            type="com.example.agriventure.data.models.Produce" />
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload_image"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:text="@string/upload_image"
            android:layout_marginTop="36dp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/item_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:fadingEdge="horizontal"
            android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/txt_produce_catgeory"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/produce_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/txt_produce_name"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/produce_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/txt_produce_amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/produce_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/txt_produce_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/produce_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/txt_produce_availability"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/produce_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@style/Widget.MaterialComponents.LinearProgressIndicator"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:progress="0"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_produce"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:text="@string/add_produce"
            android:layout_marginTop="100dp"
            />

    </LinearLayout>

</layout>