<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="18dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/item_image"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_weight_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_weight_lbl"
            android:textSize="12sp"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_name"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/font_grey"
            android:textStyle="bold"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/item_weight_lbl"
            app:layout_constraintTop_toBottomOf="@id/item_name"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_price_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_price_lbl"
            android:textSize="12sp"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_weight_lbl"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/font_grey"
            android:textStyle="bold"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/item_price_lbl"
            app:layout_constraintTop_toBottomOf="@id/item_weight"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/place_offer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/font_grey"
            android:textStyle="bold"
            android:text="@string/place_offer_text"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_price"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/offer_amt_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/txt_offer_amount"
            app:layout_constraintTop_toBottomOf="@id/place_offer_title"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/offer_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_offer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:text="@string/add_offer"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/offer_amt_txt"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/disclaimer_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_text"
            android:textSize="12sp"
            app:lineHeight="24dp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/btn_add_offer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>